tests/errors/second_stage/entry_undefined/entry_undefined.as
; .entry parameter's argument was not defined
.entry myLabel